--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "animate.css": "^4.1.1",
+    "antd": "^5.26.4",
     "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
