--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.2",
     "zustand": "^5.0.6"
   },
